// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup renders 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}
          >
            <span>
              Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}
          >
            <span>
              Case studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
  >
    <div>
      <div>
        <h1>
          Joining the Digital Marketplace
        </h1>
        <p>
          To become a registered seller and offer your services or software products to government you need to tell us about your business. 
        </p>
        <p>
          By completing this application you are automatically responding to an open approach to market, whose terms and conditions, like other government tenders, are 
          <a
            href="http://tenders.gov.au"
            rel="external"
            target="_blank"
          >
            publicly available.
          </a>
        </p>
        <p>
           The information you share will be used to create your seller profile. If you offer services it will also be used to confirm you meet the 
          <a
            href="/assessment-criteria"
            rel="external"
            target="_blank"
          >
            assessment criteria
          </a>
           when you express interest in opportunities.
        </p>
        <p>
           It may take more than one visit to complete this application. But do not worry, your information will be saved automatically if you need to come back later.
        </p>
        <h2>
          You will need
        </h2>
        <ul>
          <li>
            Your basic business information
          </li>
          <li>
            Recent financial records or a viability statement from your accountant
          </li>
          <li>
            Proof of relevant insurance cover
          </li>
        </ul>
        <h2>
          You will be asked to
        </h2>
        <ul>
          <li>
            Share details about services or products you wish to provide
          </li>
          <li>
             Provide case studies and referees to support your application
          </li>
          <li>
            Accept the Digital Marketplace Master Agreement
          </li>
        </ul>
        <a
          href="/static/media/documents/digital-marketplace-master-agreement.pdf"
          rel="external"
          target="_blank"
        >
          Download Digital Marketplace Master Agreement PDF
        </a>
        <br />
        <br />
        <div />
        <p>
          <a
            href="#"
            onClick={[Function]}
            role="button"
          >
            Start now 
          </a>
        </p>
      </div>
    </div>
  </article>
</div>
`;

exports[`Signup renders empty Your Info form 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}
          >
            <span>
              Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}
          >
            <span>
              Case studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
  >
    <div
      className="layout"
    >
      <header>
        <h1
          tabIndex="-1"
        >
          Contact details
        </h1>
      </header>
      <article
        role="main"
      >
        <form
          action={undefined}
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_name"
            >
              Business contact name
            </label>
            <p
              className="hint"
              id="contact_name-hint"
            >
              The contact listed on your seller profile page and the person who receives new opportunities by email.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              disabled={false}
              id="contact_name"
              maxLength={undefined}
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_email"
            >
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="contact_email"
              maxLength={undefined}
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_phone"
            >
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="contact_phone"
              maxLength={undefined}
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="representative"
            >
              Authorised representative name
            </label>
            <p
              className="hint"
              id="representative-hint"
            >
              This is the person authorised to enter into contracts on behalf of the business. 
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              disabled={false}
              id="representative"
              maxLength={undefined}
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="email"
            >
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="email"
              maxLength={undefined}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="phone"
            >
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="phone"
              maxLength={undefined}
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="disclosures"
          />
          <div
            styleName="nav-row"
          >
            <button
              styleName="nav-button"
              type="submit"
            >
              Save and continue
            </button>
            <button
              className="save-button"
              onClick={[Function]}
              styleName="nav-button"
            >
              Save and finish later
            </button>
            <button
              className="button-secondary"
              onClick={[Function]}
              styleName="nav-link skip-button"
            >
              Skip for now
            </button>
          </div>
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`Signup renders populated Your Info form 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}
          >
            <span>
              Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}
          >
            <span>
              Case studies
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
  >
    <div
      className="layout"
    >
      <header>
        <h1
          tabIndex="-1"
        >
          Contact details
        </h1>
      </header>
      <article
        role="main"
      >
        <form
          action="https://httpbin.org/post"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <input
            id="csrf_token"
            name="csrf_token"
            type="hidden"
            value="abc"
          />
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_name"
            >
              Business contact name
            </label>
            <p
              className="hint"
              id="contact_name-hint"
            >
              The contact listed on your seller profile page and the person who receives new opportunities by email.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              disabled={false}
              id="contact_name"
              maxLength={undefined}
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_email"
            >
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="contact_email"
              maxLength={undefined}
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_phone"
            >
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="contact_phone"
              maxLength={undefined}
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="representative"
            >
              Authorised representative name
            </label>
            <p
              className="hint"
              id="representative-hint"
            >
              This is the person authorised to enter into contracts on behalf of the business. 
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              disabled={false}
              id="representative"
              maxLength={undefined}
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value="Paul Acron"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="email"
            >
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="email"
              maxLength={undefined}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value="email@domain.com"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="phone"
            >
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              disabled={false}
              id="phone"
              maxLength={undefined}
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              readOnly={undefined}
              type="text"
              value="0292000000"
            />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="disclosures"
          />
          <div
            styleName="nav-row"
          >
            <button
              styleName="nav-button"
              type="submit"
            >
              Save and continue
            </button>
            <button
              className="save-button"
              onClick={[Function]}
              styleName="nav-button"
            >
              Save and finish later
            </button>
            <button
              className="button-secondary"
              onClick={[Function]}
              styleName="nav-link skip-button"
            >
              Skip for now
            </button>
          </div>
        </form>
      </article>
    </div>
  </article>
</div>
`;
